fix: item serialization bug